main.tf
resource "aws_instance" "ec2-demo" {
    ami =""
    instance_type = "t2.micro"
  
}
